--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bulma": "^0.8.2",
     "bulma-calendar": "^6.0.9",
     "core-js": "^3.6.4",
+    "vee-validate": "^3.3.7",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
     "vuex": "^3.1.3"
