--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-.vscode/*
 .DS_Store
 node_modules
 /dist
@@ -6,6 +5,7 @@ node_modules
 # local env files
 .env.local
 .env.*.local
+package-lock.json
 
 # Log files
 npm-debug.log*
