--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "buefy": "^0.8.20",
     "bulma": "^0.8.2",
     "bulma-calendar": "^6.0.9",
     "core-js": "^3.6.4",
+    "sass": "^1.26.10",
+    "sass-loader": "^9.0.2",
     "vee-validate": "^3.3.7",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
